@@ -1994,7 +1994,7 @@ glue (void)
       fprintf (asmFile, "%s", iComments2);
       fprintf (asmFile, "; Stack segment in internal ram \n");
       fprintf (asmFile, "%s", iComments2);
-      fprintf (asmFile, "\t.area\tSSEG\t(DATA)\n" "__start__stack:\n\t.ds\t1\n\n");
+      fprintf (asmFile, "\t.area\tSSEG\n" "__start__stack:\n\t.ds\t1\n\n");
     }
 
   /* create the idata segment */
@@ -2147,7 +2147,9 @@ glue (void)
     }
   dbuf_write_and_destroy (&statsg->oBuf, asmFile);
 
-  if (port->general.glue_up_main && mainf && IFFUNC_HASBODY (mainf->type))
+  /* STM8 note: there are no such instructions supported.
+     Also, we don't need this logic as well. */
+  if (port->general.glue_up_main && mainf && IFFUNC_HASBODY (mainf->type) && !TARGET_IS_STM8)
     {
       /* This code is generated in the post-static area.
        * This area is guaranteed to follow the static area
@@ -2161,8 +2163,12 @@ glue (void)
   tfprintf (asmFile, "\t!areahome\n", HOME_NAME);
   dbuf_write_and_destroy (&home->oBuf, asmFile);
 
-  if (mainf && IFFUNC_HASBODY (mainf->type))
+  if (mainf && IFFUNC_HASBODY (mainf->type) && !TARGET_IS_STM8)
     {
+      /* STM8 note: there is no need to call main().
+         Instead of that, it's address is specified in the 
+	 interrupts table and always equals to 0x8080.
+	*/
       /* entry point @ start of HOME */
       fprintf (asmFile, "__sdcc_program_startup:\n");
 
