@@ -1,3 +1,11 @@
+2013-04-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sdas/asstm8/stm8mch.c,
+	  src/SDCCglue.c,
+	  src/stm8/gen.c,
+	  src/stm8/main.c:
+	  STM8: Applied patches from Valentin Dudouyt containing various fixes.
+
 2013-04-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c,
